# DB_hh

./: README.md  pyproject.toml
src/: abstract_db_manager.py  api_employers.py  config.py  database.ini  db_manager.py  hh.py  main.py  utils.py
tests/: test_config.py  test_db_manager.py  test_hh.py
