[tool.poetry]
name = "db-hh"
version = "0.1.0"
description = ""
authors = ["Julya Shapaeva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pytest = "^8.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
